--- a/_includes/offcanvas.html
+++ b/_includes/offcanvas.html
@@ -8,7 +8,7 @@
       </a>
     </div>
     <nav>
-			{% include menu.html %}
+			{% include linklist.html dynamic=true items=include.menu_items %}
     </nav>
   </div>
 </section>
