--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 {% include header.html hideOnDesktop=true megamenu=true isFixed=false %}
 
 {% include cookiebar.html %}
-{% include offcanvas.html %}
+{% include offcanvas.html menu_items=site.data.menu_items %}
 
 <div id="main">
   {{ content }}
