--- a/_includes/offcanvas.html
+++ b/_includes/offcanvas.html
@@ -1,9 +1,9 @@
 <section class="Offcanvas Offcanvas--left Offcanvas--modal js-fr-offcanvas u-jsVisibilityHidden u-nojsDisplayNone u-hiddenPrint" id="menu">
-	<h2 class="u-hiddenVisually">Menu di navigazione</h2>
+	<h2 class="u-hiddenVisually">{{ t.navigation_menu_label }}</h2>
   <div class="Offcanvas-content u-background-white">
     <div class="Offcanvas-toggleContainer u-background-70 u-jsHidden">
       <a class="Hamburger-toggleContainer u-block u-color-white u-padding-bottom-xxl u-padding-left-s u-padding-top-xxl js-fr-offcanvas-close"
-        aria-controls="menu" aria-label="esci dalla navigazione" title="esci dalla navigazione" href="#">
+        aria-controls="menu" aria-label="{{ t.navigation_menu_esc }}" title="{{ t.navigation_menu_esc }}" href="#">
         <span class="Hamburger-toggle is-active" aria-hidden="true"></span>
       </a>
     </div>
