--- a/_includes/scrolltop.html
+++ b/_includes/scrolltop.html
@@ -1,4 +1,4 @@
-<a href="#" title="torna all'inizio del contenuto" class="ScrollTop js-scrollTop js-scrollTo">
+<a href="#" title="{{ t.scrolltop_label }}" class="ScrollTop js-scrollTop js-scrollTo">
   <i class="ScrollTop-icon Icon-arrow-up" aria-hidden="true"></i>
-  <span class="u-hiddenVisually">torna all'inizio del contenuto</span>
+  <span class="u-hiddenVisually">{{ t.scrolltop_label }}</span>
 </a>
