--- a/_includes/search_form.html
+++ b/_includes/search_form.html
@@ -3,7 +3,7 @@
     <input class="Form-input Grid-cell u-sizeFill u-text-r-s" required id="search">
     <label class="Form-label" for="search">{{ t.search_form_label | capitalize }}...</label>
     <button class="Grid-cell u-sizeFit Icon-search u-background-60 u-color-white u-padding-all-s u-textWeight-700"
-      title="t.search_form_start" aria-label="{{ t.search_form_start }}">
+      title="{{ t.search_form_start }}" aria-label="{{ t.search_form_start }}">
     </button>
   </div>
 </form>
