--- a/_includes/skiplinks.html
+++ b/_includes/skiplinks.html
@@ -1,4 +1,6 @@
 <ul class="Skiplinks js-fr-bypasslinks u-hiddenPrint">
-  <li><a href="#main">Vai al Contenuto</a></li>
-  <li><a class="js-fr-offcanvas-open" href="#menu" aria-controls="menu" aria-label="accedi al menu" title="accedi al menu">Vai alla navigazione del sito</a></li>
+  <li><a href="#main">{{ t.skiplink_goto_content }}</a></li>
+  <li><a class="js-fr-offcanvas-open" href="#menu" aria-controls="menu"
+    aria-label="{{ t.skiplink_goto_navigation }}" title="{{ t.skiplink_goto_navigation }}">
+    {{ t.skiplink_goto_navigation }}</a></li>
 </ul>
