--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,6 +39,7 @@
 
   <link media="all" rel="stylesheet" href="{{ '/assets/toolkit/vendor.css' | relative_url }}">
   <link media="all" rel="stylesheet" href="{{ '/assets/toolkit/build.css' | relative_url }}">
+  <link media="all" rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
 
   <script src="{{ '/assets/toolkit/vendor/jquery.min.js' | relative_url }}"></script>
 
