--- a/_includes/lang_switch.html
+++ b/_includes/lang_switch.html
@@ -1,15 +1,9 @@
 <div class="Header-languages">
 
-  {% for lang in site.data.l10n limit:2 %}
-  <a class="Header-language {% if active_lang == lang[0] %}is-active{% endif %} u-hidden u-md-inlineBlock u-lg-inlineBlock" href="{{ '/' | append: lang[0] }}" title="{{ lang[1].t.lang_on_site }}">
-    <abbr title="{{ lang[1].name }}">{{ lang[1].code | upcase }}</abbr>
-  </a>{% endfor %}<a href="#languages" data-menu-trigger="languages" class="Header-language u-border-none u-zindex-max u-inlineBlock">
+  <a href="#languages" data-menu-trigger="languages" class="Header-language u-border-none u-zindex-max u-inlineBlock">
     <span class="u-hiddenVisually">{{ t.active_lang }}:</span>
-    <span class="u-md-hidden u-lg-hidden">{{ site.data.l10n[active_lang].code | upcase }}</span>
-    <span class="Icon Icon-expand u-padding-left-xs u-md-hidden u-lg-hidden"></span>
-    {% if site.data.l10n.size > 2 %}
-    <span class="Icon Icon-more-actions u-padding-left-xxs u-padding-right-xxs u-hidden u-md-inlineBlock u-lg-inlineBlock"></span>
-    {% endif %}
+    <span class="">{{ site.data.l10n[active_lang].code | upcase }}</span>
+    <span class="Icon Icon-expand u-padding-left-xs"></span>
   </a>
 
   <div id="languages" data-menu class="Dropdown-menu Header-language-other u-jsDisplayNone u-nojsDisplayNone">
