--- a/_includes/scrolltop.html
+++ b/_includes/scrolltop.html
@@ -1,4 +1,4 @@
 <a href="#" title="{{ t.scrolltop_label }}" class="ScrollTop js-scrollTop js-scrollTo">
-  <i class="ScrollTop-icon Icon-arrow-up" aria-hidden="true"></i>
+  <i class="ScrollTop-icon Icon-collapse" aria-hidden="true"></i>
   <span class="u-hiddenVisually">{{ t.scrolltop_label }}</span>
 </a>
