--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ lang: it
   button='Call to action'
 %}
 
-<div class="u-layout-wide u-layoutCenter u-padding-bottom-xxl u-padding-top-xxl u-padding-left-xxs u-padding-right-xxs">
+<div class="u-layout-wide u-layoutCenter u-padding-bottom-xxl u-padding-top-xxl u-layout-r-withGutter">
 
     <ul class="Linklist Linklist--padded">
       {% for post in site.posts %}
@@ -25,7 +25,7 @@ lang: it
       {% endfor %}
     </ul>
 
-    <section class="Grid Grid--withGutter u-padding-r-all">
+    <section class="Grid Grid--withGutterM u-padding-r-all">
       {% for i in (1..3) %}
       <div class="Grid-cell u-md-size1of3 u-lg-size1of3 u-margin-r-bottom">
         {% include card.html
@@ -40,7 +40,7 @@ lang: it
       {% endfor %}
     </section>
 
-    <section class="Grid Grid--withGutter u-padding-r-all">
+    <section class="Grid Grid--withGutterM u-padding-r-all">
       {% for i in (1..3) %}
       <div class="Grid-cell u-md-size1of3 u-lg-size1of3 u-margin-r-bottom">
         {% include card-gallery.html
