--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 {% include head.html %}
 {% include skiplinks.html %}
 
-{% include header.html hideOnDesktop=true megamenu=true isFixed=false %}
+{% include header.html hideOnDesktop=true megamenu=true %}
 
 {% include cookiebar.html %}
 {% include offcanvas.html menu_items=site.data.menu_items %}
