display only if more than one lang

--- a/_includes/lang_switch.html
+++ b/_includes/lang_switch.html
@@ -1,3 +1,4 @@
+{% if site.data.l10n.size > 1 %}
 <div class="Header-languages">
 
   <a href="#languages" data-menu-trigger="languages" class="Header-language u-border-none u-zindex-max u-inlineBlock">
@@ -15,3 +16,4 @@
   </div>
 
 </div>
+{% endif %}
