--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,5 +43,16 @@
 
   <script src="{{ '/assets/toolkit/vendor/jquery.min.js' | relative_url }}"></script>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/icons/apple-touch-icon.png' | relative_url }}">
+  <link rel="icon" type="image/png" href="{{ '/assets/icons/favicon-32x32.png' | relative_url }}" sizes="32x32">
+  <link rel="icon" type="image/png" href="{{ '/assets/icons/favicon-16x16.png' | relative_url }}" sizes="16x16">
+  <link rel="manifest" href="{{ '/assets/icons/manifest.json' | relative_url }}">
+  <link rel="mask-icon" href="{{ '/assets/icons/safari-pinned-tab.svg' | relative_url }}" color="#0066cc">
+  <link rel="shortcut icon" href="{{ '/assets/icons/favicon.ico' | relative_url }}">
+  <meta name="apple-mobile-web-app-title" content="Crescita Digitale">
+  <meta name="application-name" content="Crescita Digitale">
+  <meta name="msapplication-config" content="{{ '/assets/icons/browserconfig.xml' | relative_url }}">
+  <meta name="theme-color" content="#0066cc">
+
 </head>
 <body class="{{ site.css_theme }}">
