--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,10 +49,10 @@
   <link rel="manifest" href="{{ '/assets/icons/manifest.json' | relative_url }}">
   <link rel="mask-icon" href="{{ '/assets/icons/safari-pinned-tab.svg' | relative_url }}" color="#0066cc">
   <link rel="shortcut icon" href="{{ '/assets/icons/favicon.ico' | relative_url }}">
-  <meta name="apple-mobile-web-app-title" content="Crescita Digitale">
-  <meta name="application-name" content="Crescita Digitale">
+  <meta name="apple-mobile-web-app-title" content="{{ site.title }}">
+  <meta name="application-name" content="{{ site.title }}">
   <meta name="msapplication-config" content="{{ '/assets/icons/browserconfig.xml' | relative_url }}">
-  <meta name="theme-color" content="#0066cc">
+  <meta name="theme-color" content="{{ site.theme_color }}">
 
 </head>
 <body class="{{ site.css_theme }}">
