--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,7 +47,7 @@
   <link rel="icon" type="image/png" href="{{ '/assets/icons/favicon-32x32.png' | relative_url }}" sizes="32x32">
   <link rel="icon" type="image/png" href="{{ '/assets/icons/favicon-16x16.png' | relative_url }}" sizes="16x16">
   <link rel="manifest" href="{{ '/assets/icons/manifest.json' | relative_url }}">
-  <link rel="mask-icon" href="{{ '/assets/icons/safari-pinned-tab.svg' | relative_url }}" color="#0066cc">
+  <link rel="mask-icon" href="{{ '/assets/icons/safari-pinned-tab.svg' | relative_url }}" color="{{ site.theme_color }}">
   <link rel="shortcut icon" href="{{ '/assets/icons/favicon.ico' | relative_url }}">
   <meta name="apple-mobile-web-app-title" content="{{ site.title }}">
   <meta name="application-name" content="{{ site.title }}">
