Add breadcrumbs to pages
In _config.yml rimossa la collection “pages” perché sembra che
sovrascriva la collection interna site.pages, infatti quest’ultima non
risulta disponibile se la nuova collection risulta definita.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,8 @@ layout: default
 
 <div class="u-layout-wide u-layoutCenter u-padding-bottom-xxl u-padding-top-xxl u-layout-r-withGutter">
 
+  {% include breadcrumbs.html %}
+  
   <div class="Grid Grid--withGutter">
     <div class="Grid-cell u-md-size8of12 u-lg-size8of12">
 
