--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,11 +1,42 @@
+<div class="u-nbfc u-color-grey-30 u-xs-padding-all-none
+  u-borderShadow-m u-xs-borderShadow-none u-borderRadius-m u-background-white">
+  <img src="{{ include.image | default: //placehold.it/400x220 }}" class="u-sizeFull" alt="{{ include.alt }}" />
+  <div class="u-padding-r-all">
+    <div class="u-padding-r-all u-xs-padding-all-none">
+      <h3 class="u-padding-bottom-xs">
+        <a class="u-textClean u-textWeight-600 u-text-r-l u-color-50" href="{{ include.link }}">
+          {{ include.title }}
+        </a>
+      </h3>
+      <h4 class="u-textWeight-400 u-lineHeight-l u-text-r-xs u-color-grey-60 u-padding-bottom-xs">
+          {{ include.subtitle }}
+      </h4>
+      <p class="u-text-p u-textSecondary u-margin-r-bottom u-padding-r-bottom">
+        {{ include.text }} </p>
 
-<div class="Card Card--round Card--shadow u-color-grey-30">
-  <div class="Card-image">
-    <img src="{{ include.image }}" class="u-sizeFull" alt="{{ include.alt }}" />
-  </div>
-  <div class="Card-content u-padding-r-all">
-    <p class="Card-extra"><a class="Card-extraLink" href="{{ include.subtitle_link }}">{{ include.subtitle }}</a></p>
-    <h3 class="Card-title"><a class="Card-titleLink" href="{{ include.link }}">{{ include.title }}</a></h3>
-    <p class="Card-text">{{ include.text }}</p>
+      <div class="Grid u-padding-r-top u-margin-r-top">
+
+        <p class="u-layout-centerLeft u-padding-r-bottom">
+          <a href="#" class="u-color-50 u-text-r-xs u-textWeight-600 u-textClean">per saperne di più
+          <span class="Icon Icon-chevron-right u-margin-left-xxs u-text-xxs u-md-hidden u-sm-hidden"></span>
+        </a>
+        </p>
+        <br class="u-sm-hidden u-md-hidden u-lg-hidden">
+        <p class="u-layout-centerRight u-padding-r-bottom">
+
+          <a href="#" class="u-linkClean">
+            <span class="Icon Icon-twitter u-inlineBlock u-text-r-xs u-padding-all-xxs u-borderRadius-circle
+            u-background-50 u-color-white u-margin-right-xs"></span><span class="u-hiddenVisually">twitter</span></a>
+          <a href="#" class="u-linkClean">
+            <span class="Icon Icon-twitter u-inlineBlock u-text-r-xs u-padding-all-xxs u-borderRadius-circle
+            u-background-50 u-color-white u-margin-right-xs"></span><span class="u-hiddenVisually">twitter</span></a>
+          <a href="#" class="u-linkClean">
+            <span class="Icon Icon-twitter u-inlineBlock u-text-r-xs u-padding-all-xxs u-borderRadius-circle
+            u-background-50 u-color-white u-margin-right-xs"></span><span class="u-hiddenVisually">twitter</span></a>
+        </p>
+
+      </div>
+
+    </div>
   </div>
 </div>
