--- a/_includes/lang_switch.html
+++ b/_includes/lang_switch.html
@@ -1,5 +1,5 @@
 {% if site.data.l10n.size > 1 %}
-<div class="Header-languages">
+<div class="Header-languages u-background-50">
 
   <a href="#languages" data-menu-trigger="languages" class="Header-language u-border-none u-zindex-max u-inlineBlock">
     <span class="u-hiddenVisually">{{ t.active_lang }}:</span>
@@ -7,7 +7,8 @@
     <span class="Icon Icon-expand u-padding-left-xs"></span>
   </a>
 
-  <div id="languages" data-menu class="Dropdown-menu Header-language-other u-jsDisplayNone u-nojsDisplayNone">
+  <div id="languages" data-menu class="Dropdown-menu Header-language-other u-jsVisibilityHidden u-nojsDisplayNone">
+    <span class="Icon-drop-down Dropdown-arrow u-color-white"></span>
     <ul class="Linklist">
       {% for lang in site.data.l10n %}
       <li><a href="{{ '/' | append: lang[0] }}" class="u-padding-r-all"><span lang="{{ lang[0] }}">{{ lang[1].name }}</span></a></li>
