--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,21 @@
 {% include head.html %}
 {% include skiplinks.html %}
 
-{% include header.html hideOnDesktop=true megamenu=true %}
-
 {% include cookiebar.html %}
-{% include offcanvas.html menu_items=site.data.menu_items %}
 
-<div id="main">
-  {{ content }}
+<div class="u-background-95">
+  <div id="main" class="u-layout-wide u-layoutCenter">
+    {% include header.html %}
+    {% include offcanvas.html menu_items=site.data.menu_items %}
+
+    {{ content }}
+  </div>
 </div>
 
 {% include scrolltop.html %}
-{% include footer.html %}
+
+<div class="u-background-95">
+  <div class="u-layout-wide u-layoutCenter u-layout-r-withGutter u-hiddenPrint">
+    {% include footer--simple.html %}
+  </div>
+</div>
