--- a/assets/toolkit/src/icons/icons/ita/font/style.css
+++ b/assets/toolkit/src/icons/icons/ita/font/style.css
@@ -34,6 +34,10 @@
   transform: scale(-1, 1);
 }
 
+.Icon--rotated {
+  transform: rotate(-90deg);
+}
+
 .Icon-instagram::before {
   content: "\49";
 }
