--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,4 @@
-{% assign active_lang = page.lang | default: layout.lang | default: site.lang | default: "en" %}
-{% assign t = site.data.l10n[active_lang].t %}
+{% include setlang.html %}
 
 {% include head.html %}
 {% include skiplinks.html %}
@@ -8,7 +7,7 @@
 
 <div class="u-background-95">
   <div id="main" class="u-layout-wide u-layoutCenter">
-    {% include header.html %}
+    {% include header.html hasSearch=true %}
     {% include offcanvas.html menu_items=site.data.menu_items %}
 
     {{ content }}
