--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,7 @@ layout: default
 lang: it
 ---
 
-{% assign active_lang = page.lang | default: site.lang | default: "en" %}
-{% assign t = site.data.l10n[active_lang].t %}
-
-{{ content }}
+{% include setlang.html %}
 
 <div class="u-background-50 u-textCenter u-padding-r-all u-textCenter u-padding-bottom-xxl">
   <h1 class="u-text-r-l u-textWeight-300 u-color-white u-margin-top-l u-lineHeight-l">
