--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ lang: it
   <h1 class="u-text-r-l u-textWeight-300 u-color-white u-margin-top-l u-lineHeight-l">
              Progetti</h1>
   <p class="u-text-r-xs u-padding-r-all u-color-10 u-layout-prose u-layoutCenter u-padding-bottom-xxl u-margin-bottom-xxl">
-    Dolores porro esse similique in. Quae expedita voluptatem.
+    {{ t.home_hero }}
   </p>
 </div>
 
