--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
   <div class="Header-navbar u-background-50">
     <div class="u-layout-wide Grid Grid--alignMiddle u-layoutCenter">
       <div class="Header-logo Grid-cell" aria-hidden="true">
-        <a href="" tabindex="-1">
+        <a href="{{ homepage_link | relative_url }}" tabindex="-1">
           <img src="{{ site.logo | default: 'http://designer.italia.it/images/loghi/logo-it.svg' }}" alt="">
         </a>
       </div>
