--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,10 +22,23 @@ lang: it
   <div class="u-layout-wide u-layoutCenter u-padding-bottom-xxl u-cf">
 
     <div class="js-Masonry-container" style="margin-top: -10em" data-columns>
-      {% for i in (1..3) %}
+
+      {% assign projects = site.projects | where: 'lang', active_lang | sort 'order' | reverse %}
+
+      {% for project in projects %}
+
       <div class="Masonry-item js-Masonry-item">
-        {% include card.html title='Title' link='//example.com' subtitle='Subtitle' text='Occaecat sunt fugiat cillum est in cillum dolore ea dolore.' image='//placehold.it/400x220' alt='Alt text' %}
+        {% include card.html
+          title=project.title
+          link='//example.com'
+          subtitle=project.subtitle
+          text=project.content
+          socials=project.socials
+          image='//placehold.it/400x220'
+          alt=''
+          %}
       </div>
+
       {% endfor %}
     </div>
 
