--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ lang: it
 
 <div class="u-background-50 u-textCenter u-padding-r-all u-textCenter u-padding-bottom-xxl">
   <h1 class="u-text-r-l u-textWeight-300 u-color-white u-margin-top-l u-lineHeight-l">
-             Progetti</h1>
+             {{ page.title | capitalize }}</h1>
   <p class="u-text-r-xs u-padding-r-all u-color-10 u-layout-prose u-layoutCenter u-padding-bottom-xxl u-margin-bottom-xxl">
     {{ t.home_hero }}
   </p>
