--- a/_includes/offcanvas.html
+++ b/_includes/offcanvas.html
@@ -1,4 +1,4 @@
-<section class="Offcanvas Offcanvas--left Offcanvas--modal js-fr-offcanvas u-jsVisibilityHidden u-nojsDisplayNone u-hiddenPrint" id="menu">
+<section class="Offcanvas Offcanvas--right Offcanvas--modal js-fr-offcanvas u-jsVisibilityHidden u-nojsDisplayNone u-hiddenPrint" id="menu">
 	<h2 class="u-hiddenVisually">{{ t.navigation_menu_label }}</h2>
   <div class="Offcanvas-content u-background-white">
     <div class="Offcanvas-toggleContainer u-background-70 u-jsHidden">
