--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,7 +27,9 @@ layout: default
 
     <div class="Grid-cell u-sizeFull u-md-size7of12 u-lg-size7of12">
 
-      {{ content }}
+      <div class="Prose">
+        {{ content }}
+      </div>
 
     </div>
 
