--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="Header-banner u-background-50">
     <div class="Header-owner Headroom-hideme u-border-bottom-xxs">
-      <a href=""><span>{{ site.owner }} <span class="u-hidden u-md-inline u-lg-inline u-sm-inline">
+      <a href="{{ site.owner_link }}"><span>{{ site.owner }} <span class="u-hidden u-md-inline u-lg-inline u-sm-inline">
         - {{ site.owner_desc }}</span></span></a> {% include lang_switch.html %}
 
     </div>
@@ -11,14 +11,14 @@
   <div class="Header-navbar u-background-50">
     <div class="u-layout-wide Grid Grid--alignMiddle u-layoutCenter">
       <div class="Header-logo Grid-cell" aria-hidden="true">
-        <a href="{{ homepage_link | relative_url }}" tabindex="-1">
+        <a href="{{ '/' | relative_url }}" tabindex="-1">
           <img src="{{ site.logo | default: 'http://designer.italia.it/images/loghi/logo-it.svg' }}" alt="">
         </a>
       </div>
 
       <div class="Header-title Grid-cell">
         <h1 class="Header-titleLink">
-          <a href="{{ homepage_link | relative_url }}">{{ t.site_title | default: site.title | escape }}
+          <a href="{{ '/' | relative_url }}">{{ t.site_title | default: site.title | escape }}
             {% if site.pill %}
               <span class="u-lg-hidden u-md-hidden u-sm-hidden u-cf u-padding-top-xxs u-block"></span>
               <span class="u-color-20 u-text-xxs
@@ -56,14 +56,15 @@
         </div>
         {% endif %}
 
-        <div class="Header-toggle Grid-cell">
-          <a class="Hamburger-toggleContainer js-fr-offcanvas-open u-nojsDisplayInlineBlock u-lg-hidden u-md-hidden" href="#menu" aria-controls="menu" aria-label="{{ t.toggle_menu_label }}" title="{{ t.toggle_menu_label }}">
-            <span class="Hamburger-toggle" role="presentation"></span>
-            <span class="Header-toggleText" role="presentation">Menu</span>
-          </a>
-        </div>
-
       </div>
+
+      <div class="Header-toggle Grid-cell">
+        <a class="Hamburger-toggleContainer js-fr-offcanvas-open u-nojsDisplayInlineBlock u-lg-hidden u-md-hidden" href="#menu" aria-controls="menu" aria-label="{{ t.toggle_menu_label }}" title="{{ t.toggle_menu_label }}">
+          <span class="Hamburger-toggle" role="presentation"></span>
+          <span class="Header-toggleText" role="presentation">Menu</span>
+        </a>
+      </div>
+
     </div>
   </div>
   <!-- Header-navbar -->
