--- a/_includes/sideblock.html
+++ b/_includes/sideblock.html
@@ -1,8 +1,8 @@
 <div class="Grid-cell u-sizeFull u-md-size4of12 u-lg-size4of12 u-md-before1of12 u-lg-before1of12">
-  <div class="u-nbfc u-color-grey-30 u-xs-padding-all-none u-sizeFull
-            u-borderShadow-m u-xs-borderShadow-none u-borderRadius-m u-background-white" style="margin-top: -120px">
+  <div class="u-nbfc u-color-grey-30 u-xs-padding-all-none u-sizeFull u-margin-bottom-xl
+            u-borderShadow-m u-xs-borderShadow-none u-borderRadius-m u-background-white u-pullUp">
     <div class="u-padding-r-all">
-      <div class="u-padding-r-all u-xs-padding-all-none" style="min-height: 250px">
+      <div class="u-padding-r-all u-xs-padding-all-none u-minHeight-250">
         <h2 class="u-textWeight-400 u-text-r-xs u-color-grey-80 u-margin-r-bottom">{{ include.title }}</h2>
           {{ include.content }}
       </div>
